# SPC_IS-TRENTo

./: run.sh  trento
Derivations/: Cumulants_3SPC.nb  InitialEcc_to_InitialCumul.nb  MultiharmonicCumulants_v2_0.m  SC-IS.nb  SPC-IS.nb
calculator/: CMakeLists.txt  ratio.cpp  read_root.cpp
calculator/src/: CMakeLists.txt  events_info_CLASS.cpp  func_LinkDef.h  functions.cpp  functions.h
config_files/: calc-config.conf  expr_2SPC.conf  expr_3SPC.conf  expr_4SPC.conf  expr_SC.conf  trento_config.conf
config_files/Archives/: Observables_SC.conf  Observables_SPC.conf  Observabls.conf  ratio_list.conf
root_trento/: CMakeLists.txt  merger.cpp  trento_to_root.cpp
root_trento/src/: CMakeLists.txt  LinkDef.h  event_CLASS.cpp  event_CLASS.h  events_info_CLASS.h  info_LinkDef.h  trento_options.cpp  trento_options.h
trento-master/src/: event.cxx  event.h  nucleus.cxx  nucleus.h  nucleus_oldTrento.cxx  nucleus_oldtrento.h  output.cxx  trento.cxx
trento-master/src/modified/: event.cxx  event.h  output.cxx
